RESOLVED FIXED 120872
MediaStream API: Moving Add/Remove track from WebMediaStreamCenterClient to WebMediaStream
https://bugs.webkit.org/show_bug.cgi?id=120872
Summary MediaStream API: Moving Add/Remove track from WebMediaStreamCenterClient to W...
Eric Carlson
Reported 2013-09-06 11:45:58 PDT
Attachments
Proposed patch (6.04 KB, patch)
2013-09-07 13:15 PDT, Eric Carlson
no flags
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 (498.51 KB, application/zip)
2013-09-07 15:18 PDT, Build Bot
no flags
Eric Carlson
Comment 1 2013-09-07 13:15:20 PDT
Created attachment 210918 [details] Proposed patch
Build Bot
Comment 2 2013-09-07 15:18:34 PDT
Comment on attachment 210918 [details] Proposed patch Attachment 210918 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1714648 New failing tests: fast/workers/termination-with-port-messages.html
Build Bot
Comment 3 2013-09-07 15:18:35 PDT
Created attachment 210926 [details] Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Eric Carlson
Comment 4 2013-09-07 17:06:02 PDT
(In reply to comment #3) > Created an attachment (id=210926) [details] > Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 > > The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. > Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4 Unexpected flakiness: text-only failures (2) http/tests/inspector/inspect-element.html [ Failure Pass ] inspector/storage-panel-dom-storage-update.html [ Failure Pass ] Regressions: Unexpected crashes (1) fast/workers/termination-with-port-messages.html [ Crash ] These have nothing to do with this patch.
Jer Noble
Comment 5 2013-09-09 10:23:04 PDT
Comment on attachment 210918 [details] Proposed patch LGTM. r=me.
WebKit Commit Bot
Comment 6 2013-09-09 10:47:53 PDT
Comment on attachment 210918 [details] Proposed patch Clearing flags on attachment: 210918 Committed r155362: <http://trac.webkit.org/changeset/155362>
WebKit Commit Bot
Comment 7 2013-09-09 10:47:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.