Source/WebCore/platform/mediastream/MediaStreamDescriptor.h
@@ -77,9 +77,21 @@ public:
     void addAudioComponent(PassRefPtr<MediaStreamComponent> component) { m_audioComponents.append(component); }
     void removeAudioComponent(MediaStreamComponent* component)
     {
-        size_t pos = m_audioComponents.find(component);
+        size_t pos = m_videoComponents.find(component);
         if (pos != notFound)
-            m_audioComponents.remove(pos);
+            m_videoComponents.remove(pos);
+    }
+
+    void addRemoteTrack(MediaStreamComponent* component)
+    {
+        if (m_client)
+            m_client->addRemoteTrack(component);
+    }
+
+    void removeRemoteTrack(MediaStreamComponent* component)
+    {
+        if (m_client)
+            m_client->removeRemoteTrack(component);
     }
 
     unsigned numberOfVideoComponents() const { return m_videoComponents.size(); }
